force-app/main/default/objects/Product_Discussion__c/Product_Discussion__c.object-meta.xml
<CustomObject>
    <label>Product Discussion</label>
    <nameField>
        <displayFormat>DISC-{000000}</displayFormat>
        <label>Discussion ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Discussions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>