force-app/main/default/objects/Product_Discussion__c/fields/Competitor_Mentioned__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Mentioned__c</fullName>
    <label>Competitor Mentioned</label>
    <length>100</length>
    <type>Text</type>
</CustomField>