force-app/main/default/objects/Product_Discussion__c/fields/Doctor_Visit__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Visit__c</fullName>
    <label>Doctor Visit</label>
    <referenceTo>Doctor_Visit__c</referenceTo>
    <relationshipLabel>Product Discussions</relationshipLabel>
    <relationshipName>Product_Discussions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>