force-app/main/default/objects/Product_Discussion__c/fields/Follow_up_Required__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow-up Required</label>
    <type>Checkbox</type>
</CustomField>